add docs for node
